# bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
base/: SEEDS  __init__.py  __main__.py  cli.py
base/core/: base_cog.py  client.py  config.py  database.py
base/core/sql/: add_currency.sql  change_seed.sql  get_member.sql  remove_currency.sql  schema.sql
base/exts/: admins.py  bettors.py  help.py  house_games.py  ping.py  player_games.py  ranks.py  sudo.py  superuser.py
base/utils/: embeds.py  game_utils.py  navigator.py  premade_messages.py  provably_fair.py  singleton.py  utils.py
